app-native.yaml
apiVersion: v1
kind: Pod
metadata:
  name: native-app
spec:
  containers:
    - name: app
      image: native-app:latest
      imagePullPolicy: Never
