app-wasm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wasm-app
  labels:
    app: benchmark-app
spec:
  runtimeClassName: wasmtime
  containers:
    - name: app
      image: wasm-serverless:latest
      imagePullPolicy: Never
